hard-gists/9646279d220994222845/run.log
=== Docker Run Log for 9646279d220994222845 ===
Started at: Mi 29. Okt 18:28:58 CET 2025

[2025-10-29 18:28:58] START: Running container for 9646279d220994222845
[2025-10-29 18:28:58] SUCCESS: Container 15958cc8ab7438bf0ee081749aaae5ee2b4d9ea8224ff3f597e3babef2887d5f started for 9646279d220994222845
=== Container logs for 9646279d220994222845 ===
  File "/snippet.py", line 79
    print "TDM contains %i terms and %i documents." % (len(self.features), self.tdm.shape[0])
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9646279d220994222845 ===
[2025-10-29 18:29:00] INFO: Container 15958cc8ab7438bf0ee081749aaae5ee2b4d9ea8224ff3f597e3babef2887d5f has stopped
